--- a/content/publication/journal-article/pareto_bess_tpds_2016/cite.bib
+++ b/content/publication/journal-article/pareto_bess_tpds_2016/cite.bib
@@ -1,8 +1,10 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{pareto_bess_tpds_2016,
+  title   = {Pareto Optimal Operation of Distributed Battery Energy Storage Systems for Energy Arbitrage under Dynamic Pricing},
+  author  = {X. Tan, Y. Wu and {D.H.K. Tsang}}, 
+  journal = {IEEE Transactions on Parallel and Distributed Systems},
+  year    = {2016},
+  volume  = {27},
+  number  = {7},
+  pages   = {2103-2115},
+  month   = {July},
 }
