--- a/content/publication/journal-article/bcs_renewables_IET_2018/cite.bib
+++ b/content/publication/journal-article/bcs_renewables_IET_2018/cite.bib
@@ -1,8 +1,9 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{bcs_renewables_IET_2018,
+  title   = {Optimal power dispatch of a centralised electric vehicle battery charging station with renewables},
+  author  = {W. Li and X. Tan and B. Sun and {D.H.K. Tsang}},
+  journal = {IET Communications},
+  volume  = {12},
+  number  = {5},
+  pages   = {579-585},
+  month   = {March},
 }
