--- a/content/publication/journal-article/bscs_QoS_tsg_2018/cite.bib
+++ b/content/publication/journal-article/bscs_QoS_tsg_2018/cite.bib
@@ -1,8 +1,10 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{bscs_QoS_tsg_2018,
+  title   = {Optimal Charging Operation of Battery Swapping and Charging Stations With QoS Guarantee},
+  author  = {B. Sun and X. Tan and {D.H.K. Tsang}},
+  journal = {IEEE Transactions on Smart Grid},
+  year    = {2018},
+  volume  = {9},
+  number  = {5},
+  pages   = {4689-4701},
+  month   = {Sept.},
 }
