--- a/content/publication/journal-article/contract_frequency_tii_2018/cite.bib
+++ b/content/publication/journal-article/contract_frequency_tii_2018/cite.bib
@@ -1,10 +1,10 @@
-@article{secrecy_wu_2018,
-  title = {Secrecy-Driven Resource Management for Vehicular Computation Offloading Networks},
-  author={Y. Wu and L. P. Qian and H. Mao and X. Yang and H. Zhou and X. Tan and D.H.K. Tsang},
-  journal = {IEEE Network},
-  year    = 2018,
-  volume  = 32,
-  number  = 3,
-  pages = {84-91},
-  month={May},
+@article{contract_frequency_tii_2018,
+  title   = {Contract Design for Aggregating, Trading, and Distributing Reserves in Demand-Side Frequency Regulation},
+  author  = {S. Agheb and X. Tan and B. Sun and {D.H.K. Tsang}},
+  journal = {IEEE Transactions on Industrial Informatics},
+  year    = {2018},
+  volume  = {14},
+  number  = {6},
+  pages   = {2539-2549},
+  month   = {June},
 }
