--- a/content/publication/journal-article/cooperative_MGs_2018/cite.bib
+++ b/content/publication/journal-article/cooperative_MGs_2018/cite.bib
@@ -1,8 +1,8 @@
 @article{cooperative_MGs_2018,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+  title   = {Energy management of cooperative microgrids: A distributed optimization approach},
+  author  = {T. Liu and X. Tan and B. Sun and {D.H.K. Tsang}},
+  journal = {International Journal of Electrical Power & Energy Systems},
+  year    = {2018},
+  volume  = {96},
+  pages  = {335-346},
 }
