--- a/content/publication/journal-article/online_combinatorial_auction_2020/cite.bib
+++ b/content/publication/journal-article/online_combinatorial_auction_2020/cite.bib
@@ -1,8 +1,9 @@
 @article{online_combinatorial_auction_2020,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+  title   = {Online Combinatorial Auctions for Resource Allocation with Supply Costs and Capacity Limits},
+  author  = {X. Tan and A. Leon-Garcia and Y. Wu and {D.H.K. Tsang}},
+  journal = {IEEE Journal of Selected Areas in Communications},
+  year    = {2020},
+  volume  = {},
+  number  = {},
+  month   = {},
 }
