--- a/content/publication/journal-article/pareto_bess_tpds_2016/cite.bib
+++ b/content/publication/journal-article/pareto_bess_tpds_2016/cite.bib
@@ -1,6 +1,6 @@
 @article{pareto_bess_tpds_2016,
   title   = {Pareto Optimal Operation of Distributed Battery Energy Storage Systems for Energy Arbitrage under Dynamic Pricing},
-  author  = {X. Tan, Y. Wu and {D.H.K. Tsang}}, 
+  author  = {X. Tan and Y. Wu and {D.H.K. Tsang}}, 
   journal = {IEEE Transactions on Parallel and Distributed Systems},
   year    = {2016},
   volume  = {27},
