--- a/content/publication/journal-article/posted_price_retailing_2020/cite.bib
+++ b/content/publication/journal-article/posted_price_retailing_2020/cite.bib
@@ -1,8 +1,9 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{posted_price_retailing_2020,
+  title   = {Posted-Price Retailing of Transactive Energy: An Optimal Online Mechanism without Prediction},
+  author  = {X. Tan and A. Leon-Garcia and Y. Wu and {D.H.K. Tsang}},
+  journal = {IEEE Journal of Selected Areas in Communications},
+  year    = {2020},
+  volume  = {},
+  number  = {},
+  month   = {},
 }
